artifact/cleanup-report/checks/python_compile_before.txt
Listing '.'...
Listing './.git'...
Listing './.git/hooks'...
Listing './.git/info'...
Listing './.git/logs'...
Listing './.git/logs/refs'...
Listing './.git/logs/refs/heads'...
Listing './.git/logs/refs/heads/copilot'...
Listing './.git/objects'...
Listing './.git/objects/info'...
Listing './.git/objects/pack'...
Listing './.git/refs'...
Listing './.git/refs/heads'...
Listing './.git/refs/heads/copilot'...
Listing './.git/refs/remotes'...
Listing './.git/refs/tags'...
Listing './.idea'...
Listing './.idea/inspectionProfiles'...
Listing './artifact'...
Listing './artifact/cleanup-report'...
Listing './artifact/cleanup-report/checks'...
Listing './artifact/cleanup-report/format_diffs'...
Listing './artifact/cleanup-report/linters'...
Listing './artifact/cleanup-report/tests'...
Compiling './contradiction_deteccion.py'...
Compiling './emebedding_policy.py'...
Compiling './evidence_quality_auditors.py'...
Compiling './financiero_viabilidad_tablas.py'...
***   File "./financiero_viabilidad_tablas.py", line 1888
    treatment not in intervention:
                                 ^
SyntaxError: invalid syntax

Compiling './policy_processor.py'...
Compiling './semantic_chunking_policy.py'...
*** Sorry: IndentationError: expected an indented block after function definition on line 109 (semantic_chunking_policy.py, line 112)
Compiling './teoria_cambio.py'...
